--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,11 @@
   "license": "ISC",
   "dependencies": {
     "config": "^3.3.6",
+    "it-pipe": "^1.1.0",
     "mini-ipfs": "^0.1.0",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "path": "^0.12.7",
+    "stream-to-it": "^0.2.4",
+    "streaming-iterables": "^6.0.0"
   }
 }
