--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "bin": {
@@ -18,6 +18,7 @@
     "node-fetch": "^2.6.1",
     "path": "^0.12.7",
     "stream-to-it": "^0.2.4",
-    "streaming-iterables": "^6.0.0"
+    "streaming-iterables": "^6.0.0",
+    "web3": "github:PlatONnetwork/client-sdk-js#0.15.1-develop"
   }
 }
