--- a/storage-server/package.json
+++ b/storage-server/package.json
@@ -10,16 +10,18 @@
   "author": "virgil",
   "license": "ISC",
   "dependencies": {
-    "web3": "github:PlatONnetwork/client-sdk-js#0.15.1-develop",
     "compression": "^1.7.4",
+    "config": "^3.3.7",
     "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
+    "fs-extra": "^10.0.0",
     "lru-cache": "^6.0.0",
     "mini-ipfs": "^0.1.0",
     "moment": "^2.24.0",
     "node-fetch": "^2.6.0",
     "q": "^1.5.1",
     "request": "^2.88.2",
-    "rlp": "^2.2.6"
+    "rlp": "^2.2.6",
+    "web3": "github:PlatONnetwork/client-sdk-js#master"
   }
 }
